- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.2.1, 5.3.0 RC1
- 
    None
- 
        
- 
        65a991e57e862e498fcae741f03ba1727a76fc80
Application crashes if QDockWidget has a widget with Qt::WA_NativeWindow and Qt::WA_DontCreateNativeAncestors, and it is being docked.
Attached example reproduces this. Just undock and and dock and experience the crash.
| For Gerrit Dashboard: QTBUG-38377 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 95103,4 | QDockWidget: Temporarily set WA_NativeWindow on floating dock widget | 5.3 | qt/qtbase | Status: DEFERRED | -1 | 0 | 
| 95244,3 | Make sure we don't delete child QWindows if they have WA_NativeWindow set | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |